--- a/reportes/templates/login.html
+++ b/reportes/templates/login.html
@@ -1,9 +1,9 @@
-
 {% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="{% static 'images/logo-ECVA.png' %}?v=3" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Sistema de Reportes</title>
     <script src="https://cdn.tailwindcss.com"></script>
