--- a/reportes/templates/detalle_reporte.html
+++ b/reportes/templates/detalle_reporte.html
@@ -53,7 +53,7 @@
                              class="w-[150px] h-[100px] bg-gray-200 animate-pulse flex items-center justify-center rounded-md overflow-hidden relative">
                             <i data-lucide="image" class="w-8 h-8 text-gray-400 absolute"></i>
                             
-                            <img src="{% url 'ver_imagen_segura' pieza.idPiezaRechazada %}" 
+                            <img src="{{ pieza.url_sas }}" 
                                  width="150" 
                                  data-id="{{ pieza.idPiezaRechazada }}"
                                  onload="removeLoadingAnimation(this)" 
@@ -75,8 +75,6 @@
 {% endif %}
 {% endblock %}
 
-
 {% block js %}
     <script src="{% static 'js/detalle_reporte.js' %}"></script>
 {% endblock %}
-
